--- a/pom.xml
+++ b/pom.xml
@@ -120,7 +120,11 @@
             <version>4.0.0-beta-2</version>
         </dependency>
 
-
+	 <dependency>
+	   <groupId>org.seleniumhq.selenium</groupId>
+	  <artifactId>selenium-devtools-v97</artifactId>
+	   <version>4.1.2</version>
+	   </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-chrome-driver -->
         <dependency>
